--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,13 @@
+# _config.yml — GitHub Pages (Jekyll)
+title: Mouhamadou Bachir Diop
+description: Portfolio — BI / Data Analyst (Junior) · Automatisation (n8n, Power Automate, Make, Zapier) · Microsoft 365 · SQL · Python
+theme: jekyll-theme-cayman
+
+# Optional: enrich page rendering
+markdown: kramdown
+kramdown:
+  input: GFM
+
+# Optional: if you later add a logo or favicon
+logo: /img/Basiiru%20Joop.jpg
 
