--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # _config.yml — GitHub Pages (Jekyll)
 title: Mouhamadou Bachir Diop
-description: Portfolio — BI / Data Analyst (Junior) · Automatisation (n8n, Power Automate, Make, Zapier) · Microsoft 365 · SQL · Python
+description: Portfolio — BI / Data Analyst · Automatist AI (n8n, Power Automate, Make, Zapier) · Microsoft 365 · SQL · Python
 theme: jekyll-theme-cayman
 
 # Optional: enrich page rendering
